Configured backend for deployment